Made the ui more responsive

--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,9 @@
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div class="card rounded" style="width: 30rem; margin: auto; margin-bottom: 10px; margin-top: 15px;">
-                <img src="https://s3.us-east-2.amazonaws.com/upload-icon/uploads/icons/png/10478479651530272912-512.png" class="card-img-top" style="height: 10rem; width: 10rem;margin: auto;" alt="...">
+        <div  class="container">
+            <div class="card rounded" style="width: 30rem; margin: auto; margin-bottom: 10px; margin-top: 15px; border-style: none;">
+                <img src="https://s3.us-east-2.amazonaws.com/upload-icon/uploads/icons/png/10478479651530272912-512.png" class="card-img-top" style="height: 8rem; width: 8rem;margin: auto;" alt="...">
                 <div class="card-body" style="margin: auto;">
                     <button class="btn btn-secondary changeDisplayButton" name="on">Display On</button>
                     <button class="btn btn-secondary changeDisplayButton" name="off">Display Off</button>
